# desktopCreator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  desktopCreator-1.0.0-arm64.deb
.history/src/: desktopeditor_20260303190107.cpp  desktopeditor_20260303191238.cpp  desktopentry_20260303191313.cpp  desktopentry_20260303191328.cpp  iconconverter_20260303184359.cpp  iconconverter_20260303184359.h  iconconverter_20260303184717.cpp  iconconverter_20260303184725.cpp  iconconverter_20260303190107.cpp  iconconverter_20260303190107.h  iconconverter_20260303190430.cpp  previewwidget_20260303191238.cpp
packaging/: desktopCreator.desktop
packaging/debian/: changelog  control  rules
resources/: app.qrc
resources/translations/: app_de.ts  app_en.ts
src/: aboutdialog.cpp  aboutdialog.h  categorymodel.cpp  categorymodel.h  desktopeditor.cpp  desktopeditor.h  desktopentry.cpp  desktopentry.h  iconconverter.cpp  iconconverter.h  main.cpp  mainwindow.cpp  mainwindow.h  previewwidget.cpp  previewwidget.h
tests/: CMakeLists.txt  test_desktopentry.cpp
